# llamaphone

./: .gitignore  .ruffignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODELS.md  README.md  SPEC.md  TODO.md  __init__.py  build.bat  build.sh  install.bat  installer.iss  llamaphone.py  llamaphone.spec  onboarding.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
ai/: __init__.py  ollama_client.py
ai/tools/: __init__.py  adb_tools.py  device_tools.py  fastboot_tools.py
core/: __init__.py  auth.py  config.py  logger.py
modules/: __init__.py  bypass.py  drivers.py  exploits.py
ui/: __init__.py  control_panel.py  main_window.py  splash_screen.py  styles.py  terminal_screen.py
